--- a/FashionMNIST.ipynb
+++ b/FashionMNIST.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNuccsP0thx8lMY71UzjDdd",
+      "authorship_tag": "ABX9TyMot7Q+Xtt06OG93I12a5j3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -211,6 +211,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Teste usando rede lenet5"
+      ],
+      "metadata": {
+        "id": "2QCE8oXBUozt"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
@@ -363,6 +372,15 @@
           "execution_count": 60
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Visualizando as predicoes que o modelo errou"
+      ],
+      "metadata": {
+        "id": "blPkAq-bVHaE"
+      }
     },
     {
       "cell_type": "code",
